# better-logger

./: .cargoignore  .gitignore  Cargo.toml  README.md  Trunk.toml
src/: lib.rs  logger.rs  settings.rs
src/aux/: file_operations.rs  mod.rs  running_settings.rs
src/auxiliary/: file_operations.rs  mod.rs
src/core/: log.rs  mod.rs
src/interface/: logger.rs  mod.rs  relay.rs  settings.rs
src/native/: auxiliary.rs  file.rs  log.rs  mod.rs  networking.rs
src/shared/: mod.rs
src/wasm/: auxiliary.rs  log.rs  mod.rs  networking.rs
tests/: async.rs  async_native.rs  relay.rs  sync.rs  sync_native.rs
tests/http_server/: main.rs
tests/wasm_environment/: index.html  main.rs
