[package]
name = "better-logger"
version = "2.0.3"
edition = "2024"
rust-version = "1.85.1"
authors = ["Gistyr LLC <contact@gistyr.dev>"]
description = "Flexible sync/async logger with console, file, and HTTP output"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Gistyr/better-logger"
homepage = "https://github.com/Gistyr/better-logger"
documentation = "https://docs.rs/better-logger"   
keywords = ["logging", "async", "file", "console", "log"]
categories = ["development-tools", "asynchronous"]
exclude = ["tests/logs/*.log"]

[dependencies]
log = { version = "0.4.28", optional = true }
once_cell = { version = "1.21.3", optional = true }
env_logger = { version = "0.11.8", default-features = false, features = ["auto-color", "humantime"], optional = true }
tokio = { version = "1.48.0", default-features = false, features = ["rt", "macros", "time"], optional = true }
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"], optional = true }
wasm-logger = { version = "0.2.0", optional = true }
web-sys = { version = "0.3.77", optional = true }
wasm-bindgen-futures = { version = "0.4.55", optional = true }
ureq = { version = "3.1.2", default-features = false, features = ["json", "rustls"], optional = true }
yew = { version = "0.21.0", features = ["csr"], optional = true }
tiny_http = { version = "0.12.0", optional = true }
gloo-net = { version = "0.6.0", features = ["json"], optional = true }
js-sys = { version = "0.3.77", optional = true }
serde_json = { version = "1.0.145", optional = true }

[features]
native = ["log", "once_cell", "env_logger", "tokio", "chrono", "ureq", "serde_json"]
wasm = ["log", "once_cell", "wasm-logger", "web-sys", "wasm-bindgen-futures", "gloo-net", "js-sys", "serde_json"]
testing-wasm = ["yew", "wasm"]
testing-http = ["tiny_http", "native"]

[dev-dependencies]
tokio = { version = "1.44.2", default-features = false, features = ["rt","macros","time"] }

[[bin]]
name = "wasm-test"
path = "tests/wasm_environment/main.rs"
required-features = ["testing-wasm"]

[[bin]]
name = "http-test"
path = "tests/http_server/main.rs"
required-features = ["testing-http"]