[package]
name = "better-logger"
version = "2.1.6"
edition = "2024"
rust-version = "1.85.1"
authors = ["Gistyr LLC <contact@gistyr.dev>"]
description = "Flexible sync/async logger with console, file, and HTTP output"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Gistyr/better-logger"
homepage = "https://github.com/Gistyr/better-logger"
documentation = "https://docs.rs/better-logger"   
keywords = ["logging", "async", "file", "console", "log"]
categories = ["development-tools", "asynchronous"]
exclude = ["tests/logs/*.log"]

[dependencies]
log = { version = "0.4.29", optional = true }
env_logger = { version = "0.11.8", default-features = false, features = ["auto-color", "humantime"], optional = true }
tokio = { version = "1.49.0", default-features = false, features = ["rt", "macros", "time"], optional = true }
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"], optional = true }
wasm-logger = { version = "0.2.0", optional = true }
web-sys = { version = "0.3.83", optional = true }
wasm-bindgen-futures = { version = "0.4.56", optional = true }
ureq = { version = "3.1.4", default-features = false, features = ["json", "rustls"], optional = true }
yew = { version = "0.22.0", features = ["csr"], optional = true }
tiny_http = { version = "0.12.0", optional = true }
gloo-net = { version = "0.6.0", features = ["json"], optional = true }
js-sys = { version = "0.3.83", optional = true }
serde_json = { version = "1.0.149", optional = true }
actix-web = { version = "4.12.1", optional = true }
actix-cors = { version = "0.7.1", optional = true }
awc = { version = "3.8.1", optional = true, default-features = false, features = ["rustls"] }  

[features]
native = ["log", "env_logger", "tokio", "chrono", "ureq", "serde_json"]
wasm = ["log", "wasm-logger", "web-sys", "wasm-bindgen-futures", "gloo-net", "js-sys", "serde_json"]
relay  = ["actix-web", "actix-cors", "awc", "serde_json"] 
testing-wasm = ["yew", "wasm"]
testing-http = ["tiny_http", "native"]

[dev-dependencies]
tokio = { version = "1.49.0", default-features = false, features = ["rt","macros","time"] }

[[bin]]
name = "wasm-test"
path = "tests/wasm_environment/main.rs"
required-features = ["testing-wasm"]

[[bin]]
name = "http-test"
path = "tests/http_server/main.rs"
required-features = ["testing-http"]

# cargo build --target x86_64-unknown-linux-gnu --features native
# cargo build --release --target x86_64-unknown-linux-gnu --features native
# cargo +stable build --release --target x86_64-unknown-linux-gnu --features native

# cargo build --target wasm32-unknown-unknown --features wasm
# cargo build --release --target wasm32-unknown-unknown --features wasm
# cargo +stable build --release --target wasm32-unknown-unknown --features wasm

# cargo build --target x86_64-unknown-linux-gnu --features relay
# cargo build --release --target x86_64-unknown-linux-gnu --features relay
# cargo +stable build --release --target x86_64-unknown-linux-gnu --features relay
